# vncs

./: CMakeLists.txt  vncs.sln
vcl/: CMakeLists.txt
vcl/src/: main.c
vncs/: App.axaml  App.axaml.cs  LogBlob.axaml  LogBlob.axaml.cs  Logger.cs  MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  ServiceNode.cs  vncs.csproj
vncs/Net/: Node.cs  SocketContext.cs  SocketHelper.cs  UpdateContext.cs
vncs/Reflection/: CollectibleAssemblyLoadContext.cs
